# interview_practice_app

./: .env.example  .gitignore  114.md  LICENSE  app.py  pyproject.toml  readme.md
modules/: config.py  error_handler.py  error_handling.py  errors.py  interview_logic.py  logging_config.py  session_state.py  utils.py  validation.py
modules/ui/: ui_helpers.py  ui_interview.py  ui_sidebar.py  ui_start_screen.py
prompts/evaluation/: base_instructions.j2  personality_hiring_manager.j2  personality_hr.j2  personality_ideal_candidate.j2  personality_mentor.j2  personality_sme.j2
prompts/questions/: base_instructions.j2  chain_of_thought.j2  contextual_progression.j2  few_shot.j2  technique_chain_of_thought.j2  technique_contextual_progression.j2  technique_few_shot.j2  technique_zero_shot.j2  zero_shot.j2
prompts/summary/: base_instructions.j2  technique_default.j2
prompts/system/: eval_and_question.j2  evaluation.j2  job_title_validator.j2  question.j2  summary_generator.j2
prompts/templates/: question_prompts.j2  validation_prompts.j2
prompts/validation/: base_instructions.j2  validate_job_title.j2
tests/: test_interview_logic.py  test_ui_helpers.py  test_utils.py
