[tool.poetry]
name = "interview-practice-app"
version = "0.1.0"
description = ""
authors = ["Thomas <lucke.thomas@gmx.com>"]
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
black = ">=25.11.0,<26.0.0"
ruff = ">=0.14.5,<0.15.0"
requests = ">=2.32.5,<3.0.0"
openai = "^2.8.1"
streamlit = "^1.51.0"
pyyaml = "^6.0.3"
dotenv = "^0.9.9"
jinja2 = "^3.1.6"
tenacity = "^9.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
